# feynman

./: CLAUDE.md  README.md
llm-information-theory/: .gitignore  CLAUDE.md  README.md  data.py  models.py  pyproject.toml  report.py  run.py  test_windowed_eval.py  windowed_eval.py
llm-information-theory/results/: qwen3_5-0_8b-full.jsonl  qwen3_5-0_8b-mdl8192.jsonl  qwen3_5-2b-full.jsonl  qwen3_5-2b-mdl8192.jsonl  qwen3_5-4b-full.jsonl  qwen3_5-4b-mdl8192.jsonl  qwen3_5-9b-full.jsonl
llm-topology-tda/: .gitignore  README.md  aggregate.py  analyze.py  analyze_extra.py  bootstrap_slopes.py  datasets_lib.py  failure_landscape_tda.py  failure_topology.py  matched_diff_persistence.py  negative_control.py  pipeline.py  plot_accordion.py  plot_benchmark_vs_topology.py  plot_mmlu_subjects.py  plot_nsweep.py  pyproject.toml  regrade.py  run_campaign.py  run_experiment.py
llm-topology-tda/results/: summary.json
llm-topology-tda/results-campaign/: CAMPAIGN_RESULTS.md  CAMPAIGN_RESULTS_V2.md  INSPECTION_ACCORDION.md  INSPECTION_BOOTSTRAP.md  INSPECTION_FAILURE_TOPOLOGY.md  INSPECTION_MATCHED_DIFF.md  INSPECTION_NSWEEP.md  INSPECTION_TRUTHFULQA.md  agg_accordion_full.json  agg_bootstrap_slopes.json  agg_failure_landscape_phase4.json  agg_failure_topology_phase2.json  agg_loglog_slopes.json  agg_matched_diff_persistence.json  agg_negative_control.json  agg_nsweep_0.8B.json  agg_summary.json  error_tensor.npz  experiments.jsonl  qwen_official_benchmarks.json  regraded_gsm8k.json
llm-topology-tda/results-campaign/20260429-230658-q35-4B-Base-L19-grad-phaseA-graded/: graded.json  hidden_states_layer19.npz  summary.json
llm-topology-tda/results-campaign/20260429-230658-q35-9B-Base-L19-grad-phaseA-graded/: graded.json  hidden_states_layer19.npz  summary.json
llm-topology-tda/results-campaign/20260429-232057-q35-2B-Base-L14-grad-phaseA-graded/: graded.json  hidden_states_layer14.npz  summary.json
llm-topology-tda/results-campaign/20260429-232610-q35-9B-Base-L06-phaseB-layerscan-frac20/: hidden_states_layer6.npz  summary.json
llm-topology-tda/results-campaign/20260429-232703-q35-9B-Base-L13-phaseB-layerscan-frac40/: hidden_states_layer13.npz  summary.json
llm-topology-tda/results-campaign/20260429-232756-q35-9B-Base-L19-phaseB-layerscan-frac60/: summary.json
llm-topology-tda/results-campaign/20260429-232848-q35-9B-Base-L26-phaseB-layerscan-frac80/: hidden_states_layer26.npz  summary.json
llm-topology-tda/results-campaign/20260429-232940-q35-9B-Base-L30-phaseB-layerscan-frac95/: hidden_states_layer30.npz  summary.json
llm-topology-tda/results-campaign/20260429-233033-q35-0.8B-Base-L14-grad-phaseA-graded/: graded.json  hidden_states_layer14.npz  summary.json
llm-topology-tda/results-campaign/20260429-233033-q35-4B-Base-L06-phaseB-layerscan-frac20/: summary.json  (+1 more)
(+168 files in other folders)
