[build-system]
requires = ["setuptools>=61.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-information-theory"
version = "0.1.0"
description = "Token-level entropy estimation of English on FineWeb 10BT for the Qwen3.5 family"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch==2.10.0",
    "triton==3.6.0",
    "transformers>=4.57",
    "accelerate>=1.0",
    "datasets>=3.0",
    "huggingface-hub>=0.24",
    "tqdm>=4.66",
    "numpy>=1.26",
]

[tool.uv]
package = false
no-build-isolation-package = ["torch", "triton"]
override-dependencies = [
    "triton==3.6.0",
]

# ROCm 7.2.2 wheels from AMD's repo. Targets the Radeon AI PRO R9700
# (gfx1201, RDNA4). Mirrors the layout used in feynman/llm-topology-tda.
[tool.uv.sources]
torch = { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.2/torch-2.10.0%2Brocm7.2.2.lw.git40d237bf-cp313-cp313-linux_x86_64.whl" }
triton = { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.2/triton-3.6.0%2Brocm7.2.2.git4ed88892-cp313-cp313-linux_x86_64.whl" }

[tool.ruff]
line-length = 99
target-version = "py313"
